objects/SO_Experience__c.object
<CustomObject>
    <label>Experience</label>
    <nameField>
        <label>Experience Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SO_End__c</fullName>
        <label>End</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test Drive</fullName>
                </value>
                <value>
                    <fullName>Appointment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_Location__c</fullName>
        <label>Location</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fen End</fullName>
                </value>
                <value>
                    <fullName>Classic Works</fullName>
                </value>
                <value>
                    <fullName>SVO Technical Centre</fullName>
                </value>
                <value>
                    <fullName>Gaydon</fullName>
                </value>
                <value>
                    <fullName>Customer&apos;s Location</fullName>
                </value>
                <value>
                    <fullName>On-Road Drive</fullName>
                </value>
                <value>
                    <fullName>Vehicle Loan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Sub_Status__c</fullName>
        <label>Sub-Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Customer can no longer attend</fullName>
                </value>
                <value>
                    <fullName>Customer no longer interested</fullName>
                </value>
                <value>
                    <fullName>Customer re-scheduled</fullName>
                </value>
                <value>
                    <fullName>Special Operations re-scheduled</fullName>
                </value>
                <value>
                    <fullName>No show</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Experiences</relationshipLabel>
        <relationshipName>Experiences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SO_Closed_Other__c</fullName>
        <label>Closed Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Location_Other__c</fullName>
        <label>Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Number_of_Guests__c</fullName>
        <label>Number of Guests</label>
        <summaryForeignKey>SO_Experience_Guest__c.SO_Experience__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SO_Special_Requests__c</fullName>
        <label>Special Requests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_Opportunity_Stage__c</fullName>
        <formula>TEXT( SO_Opportunity__r.StageName )</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Closed_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL(SO_Status__c  , &apos;Closed&apos;),
 ISPICKVAL( SO_Sub_Status__c , &apos;Other&apos;),
 ISBLANK( SO_Closed_Other__c )
)</errorConditionFormula>
        <errorDisplayField>SO_Closed_Other__c</errorDisplayField>
        <errorMessage>You must provide reason for selecting other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Location_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISPICKVAL( SO_Location__c , &apos;Other&apos;),
 ISBLANK( SO_Location_Other__c ) 
)</errorConditionFormula>
        <errorDisplayField>SO_Location_Other__c</errorDisplayField>
        <errorMessage>You must specify when selecting other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_before_End</fullName>
        <active>true</active>
        <errorConditionFormula>SO_End__c &lt;  SO_Start__c</errorConditionFormula>
        <errorMessage>The end cannot be before the start</errorMessage>
    </validationRules>
</CustomObject>